create offer and validator
offer create dao service and jsp with validator

--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,15 @@
   		<artifactId>mysql-connector-java</artifactId>
   		<version>8.0.20</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-validator</groupId>
+  		<artifactId>commons-validator</artifactId>
+  		<version>1.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.validation</groupId>
+  		<artifactId>validation-api</artifactId>
+  		<version>1.1.0.Final</version>
+  	</dependency>
   </dependencies>
 </project>
