--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,20 @@
   		<artifactId>validation-api</artifactId>
   		<version>1.1.0.Final</version>
   	</dependency>
+ <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>4.0.0.RELEASE</version>
+</dependency>
+ <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>4.0.0.RELEASE</version>
+</dependency>
+ <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>4.0.0.RELEASE</version>
+</dependency>
   </dependencies>
 </project>
